fix iOS & macOS layout issues #8894

--- a/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Layout/Identity/IdentityLayout.razor.scss
+++ b/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Layout/Identity/IdentityLayout.razor.scss
@@ -4,7 +4,7 @@
 
 main {
     width: 100%;
-    height: 100%
+    min-height: 100%;
 }
 
 .panel {
