--- a/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Layout/Main/MainLayout.razor.scss
+++ b/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Layout/Main/MainLayout.razor.scss
@@ -3,7 +3,7 @@
 
 main {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
 
     @include lt-md {
         height: unset;
